--- a/roles/traefik/templates/traefik.yaml.j2
+++ b/roles/traefik/templates/traefik.yaml.j2
@@ -3,7 +3,6 @@ version: "3.7"
 services:
 
   traefik:
-    container_name: traefik    
     image: traefik:latest
     command:
       - "--api.dashboard=true"
@@ -30,7 +29,7 @@ services:
         constraints:
           - node.role == manager
       restart_policy:
-        condition: on-failure
+        condition: any
         delay: 5s
       labels:
         - "traefik.enable=true"
