--- a/roles/portainer/templates/portainer.yaml.j2
+++ b/roles/portainer/templates/portainer.yaml.j2
@@ -17,6 +17,8 @@ services:
   portainer:
     image: portainer/portainer-ce:latest
     command: -H tcp://tasks.agent:9001 --tlsskipverify
+    ports:
+      - 9000:9000  # ela vai ser fechada no final do playbook
     volumes:
       - portainer_data:/data
     networks:
