--- a/roles/postgres/templates/postgres.yaml.j2
+++ b/roles/postgres/templates/postgres.yaml.j2
@@ -1,14 +1,14 @@
 version: "3.7"
 
 services:
-  postgres:
+  postgres111:
     image: postgres:14
     environment:
-      - POSTGRES_PASSWORD= {{ pg_password }}
+      - POSTGRES_PASSWORD={{POSTGRES_PASSWORD}}
     networks:
       - network_public
     ports:
-      - 5432
+      - 5432:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data
     deploy:
@@ -17,11 +17,11 @@ services:
       placement:
         constraints:
           - node.role == manager
-        #  - node.hostname == worker1
+         # - node.hostname == worker1
       resources:
         limits:
           cpus: "1"
-          memory: 2048M
+          memory: 1024M
 
 volumes:
   postgres_data:
